fix canvas z-index issue

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -16,6 +16,7 @@
 
   div.lu-header {
     position: relative;
+    z-index: 1;
   }
 
   *[draggable] {
